--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <div class="frame">
 
+  <section id="main">
   <nav>
       <div class="menu">
         <div class="logo">Youth For Who</div>
@@ -42,7 +43,6 @@
       </div>
   </nav>
 
-<section id="main">
     <div class="image_bg">
       <img src="assets/img/bg.jpg">
       <h2>ჩვენ ვზრუნავთ თქვენს ჯანმრთელობაზე</h3>
@@ -53,26 +53,38 @@
     <div class="row">
       <div class=" col-xs-6 col-sm-4">
         <div class="panel">
-          <div class="visual"></div>
-          <div class="text">
-            <div class="arrow arrow_sm"></div>
+          <a href="#">
+          <div class="visual"><img src="assets/img/icons/team.svg" class="img-responsive" height="140">
+            <h2>ჩვენი გუნდი</h2>
           </div>
+          <div class="text">
+            <p>გაიგეთ მეტი ჩვენი გუნდის შესახებ.</p>
+            <div class="arrow arrow_sm"></div>
+          </div></a>
         </div>
       </div>
       <div class=" col-xs-6 col-sm-4">
         <div class="panel">
-          <div class="visual"></div>
-          <div class="text">
-            <div class="arrow arrow_sm"></div>
+          <a href="#">
+          <div class="visual"><img src="assets/img/icons/projects.svg" class="img-responsive" height="140">
+            <h2>პროექტები</h2>
           </div>
+          <div class="text">
+            <p>გაიგეთ მეტი ჩვენს მიერ განხორციელებულ პროექტებზე.</p>
+            <div class="arrow arrow_sm"></div>
+          </div></a>
         </div>
       </div>
       <div class=" col-xs-6 col-sm-4">
         <div class="panel">
-          <div class="visual"></div>
-          <div class="text">
-            <div class="arrow arrow_sm"></div>
+          <a href="#">
+          <div class="visual"><img src="assets/img/icons/news.svg" class="img-responsive" height="140">
+            <h2>სიახლეები</h2>
           </div>
+          <div class="text">
+            <p>სიახლეები ჯანდაცვის სფეროში.</p>
+            <div class="arrow arrow_sm"></div>
+          </div></a>
         </div>
       </div>
     </div>
